# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: check_file_name_pattern.py
