[metadata]
name = pre_commit_hooks_czlee
version = 0.0.1
description = Some additional pre-commit hooks
url = https://github.com/czlee/pre-commit-hooks

[options]
packages = pre_commit_hooks

[options.entry_points]
console_scripts =
    check-file-name-pattern = pre_commit_hooks.check_file_name_pattern:main
